--- a/style.scss
+++ b/style.scss
@@ -34,7 +34,7 @@ main{
     }
     
     section{
-        p{
+        .time{
             font-size: 48pt;
             text-align: center;
         }
